# rt_pathtracer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cc  renderer.cc  renderer.h
cameras/: camera.h  cardboard_camera.cc  maya_camera.cc
geometry/: earcut.hpp  quadrics.cu  quadrics.h  quadrics_gpl.cu  quadrics_tesselator.cc  quadrics_tesselator.h  rib_loader.cc  rib_loader.h  rib_primitives.cc  rib_primitives.h  transforms.h  triangulation.h
integrator/: cameras.h  integrator.cu  integrator.h  lights.h  utils.h
materials/: bxdf.h  materials.h  microfacet.h  texture_loader.cc  texture_loader.h
network/: PracticalSocket.h  server.cc  server.h
nvidia_base/: Array.cpp  Array.hpp  Buffer.cpp  Buffer.hpp  Defs.cpp  Defs.hpp  Math.cpp  Math.hpp  Scene.cpp  Scene.hpp  Sort.cpp  Sort.hpp
nvidia_bvh/: BVH.cpp  BVH.hpp  BVHNode.cpp  BVHNode.hpp  CudaBVH.cpp  CudaBVH.hpp  Platform.cpp  Platform.hpp  SplitBVHBuilder.cpp  SplitBVHBuilder.hpp  Util.hpp
nvidia_kernels/: CudaTracerKernels.hpp  intersect_fermi.cu  intersect_kepler.cu  intersect_tesla.cu
samples/: checker_lc.tga  checker_mc.tga  concave.ma  concave.rib  cornell_box.rib  demo.rib  microfacet.rib  multi-area-light.hdr  tessellation.rib  textures.rib
